0028983: Configuration - HAVE_NO_DLL causes compilation to fail on MSVC