src/Standard/Standard_Macro.hxx
@@ -72,23 +72,7 @@
   #define Standard_ENABLE_DEPRECATION_WARNINGS
 #endif
 
-//======================================================
-// Windows-specific definitions
-//======================================================
-
-# if defined(_WIN32) && !defined(HAVE_NO_DLL)
-
-#  ifndef Standard_EXPORT
-#   define Standard_EXPORT __declspec( dllexport )
-// For global variables :
-#   define Standard_EXPORTEXTERN __declspec( dllexport ) extern
-#   define Standard_EXPORTEXTERNC extern "C" __declspec( dllexport )
-#  endif  /* Standard_EXPORT */
-
-#  ifndef Standard_IMPORT
-#   define Standard_IMPORT __declspec( dllimport ) extern
-#   define Standard_IMPORTC extern "C" __declspec( dllimport )
-#  endif  /* Standard_IMPORT */
+# ifdef _WIN32
 
 // We must be careful including windows.h: it is really poisonous stuff!
 // The most annoying are #defines of many identifiers that you could use in 
@@ -132,10 +116,30 @@
 #define NOIME NOIME
 #endif
 
+#endif
+
+# if defined(_WIN32) && !defined(HAVE_NO_DLL)
+
+//======================================================
+// Windows-specific definitions
+//======================================================
+
+#  ifndef Standard_EXPORT
+#   define Standard_EXPORT __declspec( dllexport )
+// For global variables :
+#   define Standard_EXPORTEXTERN __declspec( dllexport ) extern
+#   define Standard_EXPORTEXTERNC extern "C" __declspec( dllexport )
+#  endif  /* Standard_EXPORT */
+
+#  ifndef Standard_IMPORT
+#   define Standard_IMPORT __declspec( dllimport ) extern
+#   define Standard_IMPORTC extern "C" __declspec( dllimport )
+#  endif  /* Standard_IMPORT */
+
 # else  /* UNIX */
 
 //======================================================
-// UNIX definitions
+// UNIX / static library definitions
 //======================================================
 
 #  ifndef Standard_EXPORT
